clusters/cl01tl/manifests/spotisub/Namespace-spotisub.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spotisub
  labels:
    app.kubernetes.io/name: spotisub
    app.kubernetes.io/instance: spotisub
    app.kubernetes.io/part-of: spotisub
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
