clusters/cl01tl/manifests/spotisub/Service-spotisub.yaml
apiVersion: v1
kind: Service
metadata:
  name: spotisub
  labels:
    app.kubernetes.io/instance: spotisub
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: spotisub
    app.kubernetes.io/service: spotisub
    helm.sh/chart: spotisub-4.6.2
  namespace: spotisub
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5183
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: spotisub
    app.kubernetes.io/name: spotisub
