clusters/cl01tl/manifests/spotisub/HTTPRoute-spotisub.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: spotisub
  labels:
    app.kubernetes.io/instance: spotisub
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: spotisub
    helm.sh/chart: spotisub-4.6.2
  namespace: spotisub
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - "spotisub.alexlebens.net"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: spotisub
          namespace: spotisub
          port: 80
          weight: 100
      matches:
        - path:
            type: PathPrefix
            value: /
